--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,10 @@
 [deps]
 CARMA = "a07d8502-063d-4301-8ca6-fea2e825e4ed"
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Ensemble = "3875dfec-0b3d-4f32-b40f-7c98cee5d882"
+FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
