--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,10 @@ channels:
   - defaults
 dependencies:
   - astropy
-  - exoplanet
   - python=3.7
   - seaborn
   - jupyterlab
+  - pip
+    - git+https://github.com/exoplanet-dev/exoplanet.git#egg=exoplanet
+  - numpy
+  - pymc3
